--- a/JobDescription_RestAPI/.env
+++ b/JobDescription_RestAPI/.env
@@ -1,2 +1,2 @@
 MONGODB_URI=mongodb://localhost:27017/
-HUGGINGFACEHUB_API_TOKEN="ENTER THE YOUR API KEY"
+HUGGINGFACEHUB_API_TOKEN="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"
