--- a/RecruterAI_Streamlit_UI/requirements.txt
+++ b/RecruterAI_Streamlit_UI/requirements.txt
@@ -10,7 +10,8 @@ numpy
 python-dotenv
 deprecation
 streamlit_calendar
-streamlit_shadcn_ui
+streamlit-shadcn-ui
+reportlab
 python-docx 
 docx2pdf 
 pythoncom
