--- a/Resources_RestAPI/.env
+++ b/Resources_RestAPI/.env
@@ -1,3 +1,3 @@
 MONGODB_URI=mongodb://localhost:27017
-MYSQL_URI=mysql+mysqlconnector://root:password@localhost:3306/hr_recruiter
-HUGGINGFACEHUB_API_TOKEN="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"
+MYSQL_URI=mysql+mysqlconnector://root:Password@localhost:3306/hr_recruiter
+HUGGINGFACEHUB_API_TOKEN="ENTER YOUR TOKEN HERE"
